# frequency-discriminator-voa-simulation

./: .gitignore  CLAUDE.md  Makefile  Mode_Simulation.lsf  PN_Junction_Setup.lsf  README.md  delay_time_calc.m  flake.nix  pyproject.toml
.github/workflows/: ci.yml
lumerical/: Charge_Simulation.lsf
python/: README.md  charge_sim.py  flake.nix  mode_sim.py  params.py
src/: charge_sim.py  compare_lumerical.py  mode_sim.py  params.py  physics.py  visualize.py
tests/: test_integration.py  test_physics.py
