[project]
name = "frequency-discriminator-sim"
version = "0.1.0"
description = "Open-source Python port of the Lumerical CHARGE + MODE pipeline for the SIEPIC Active frequency-discriminator project."
requires-python = ">=3.10,<3.13"
dependencies = [
    "devsim>=2.3",
    "femwell>=0.1.10",
    "scikit-fem>=9.0",
    "shapely>=2.0",
    "gmsh>=4.11",
    "meshio>=5.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
